fix grass on mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,7 @@ h3.hero-info{
 }
 
 .grass img {
+  position: absolute;
   bottom: 0;
 }
 
